[package]
name = "near_substream_module_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "soulbound_modules"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.2"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
sha3 = "0.10.8"
regex = "1.8.4"
fancy-regex = "0.11.0"
ethereum_abi = "0.4.0"
serde_json = "1.0.97"
primitive-types = "^0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
